src/components/assetTable/AssetTable.scss
@import "../../css/variables.scss";
@import "../../css/shared.scss";

.asset-table {
  border: 1px solid $border;
  width: 100%;
  border-radius: 8px;
  padding: 0 20px;
  height: 60vh;
  overflow-y: scroll;
  &__header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding: 20px;
    &__item {
      display: flex;
      justify-content: flex-start;
      width: 16.6%;
      text-align: center;
      color: $text-color-dark;
      font-weight: 700;
      font-size: 14px;
      &--first {
        width: 22%;
      }
      &--center {
        justify-content: center;
      }
      &--last {
        justify-content: flex-end;
      }
      &--left {
        text-align: left;
      }
      &--right {
        text-align: right;
      }
    }
  }
  &__assets {
    width: 100%;
    &__loading {
      height: 50vh;
      @extend .flexCenter;
      &--white {
        color: $text-color-dark;
      }
    }
    &__asset {
      border-bottom: 1px solid $border;
      width: 100%;
      display: flex;
      justify-content: space-between;
      align-items: center;
      padding: 20px;

      &--first {
        border-top: 1px solid $border !important;
      }
      &--last {
        border-top: unset !important;
        border-bottom: unset !important;
      }
      &:hover {
        border-bottom: 1px solid transparent !important;
        border-radius: 8px;
        background-color: $bottonHover;
      }

      &__item {
        text-align: center;
        color: $text-color-dark;
        font-size: 13px;
        width: 16.6%;
        display: flex;
        justify-content: flex-start;
        &--first {
          width: 22%;
        }
        &--center {
          justify-content: center;
        }
        &--last {
          justify-content: flex-end;
        }
        &--right {
          text-align: right;
        }
        &--left {
          text-align: left;
        }
        &__image {
          width: 20px;
          margin-right: 10px;
        }
      }
    }
  }
}

